--- a/site-plan-rafting.html
+++ b/site-plan-rafting.html
@@ -54,9 +54,9 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
+        <td class="primary">[#376E65]</td>
+        <td class="secondary">[#E7C22F]</td>
+        <td class="accent1">[#A41312]</td>
         <td class="accent2"></td>
       </tr>
     </table>
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: [calibri]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [times new roman]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
