--- a/site-plan-rafting.html
+++ b/site-plan-rafting.html
@@ -57,7 +57,7 @@
         <td class="primary">[#379E65]</td>
         <td class="secondary">[#E7C22F]</td>
         <td class="accent1">[#A41312]</td>
-        <td class="accent2"></td>
+        <td class="accent2">[#A37469]</td>
       </tr>
     </table>
 
