--- a/site-plan-rafting.html
+++ b/site-plan-rafting.html
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#379E65]</td>
-        <td class="secondary">[#E7C22F]</td>
-        <td class="accent1">[#A41312]</td>
-        <td class="accent2">[#A37469]</td>
+        <td class="primary">[#91ACC0]</td>
+        <td class="secondary">[#69665D]</td>
+        <td class="accent1">[#F1371F]</td>
+        <td class="accent2">[#2A319E]</td>
       </tr>
     </table>
 
