--- a/wireframe.html
+++ b/wireframe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -58,6 +59,9 @@
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
         <h3><a href="contactus.html">Contact Us</a></h3>
         <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
             <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
