--- a/wireframe.html
+++ b/wireframe.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel='stylesheet' href='styles/style.css'>
 </head>
 <body>
+    <div id="content">
+        <max-width> 1600px </max-width>
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -47,6 +49,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -55,23 +58,21 @@
         </section>
     </main>
     <footer>
-        <h3>Dry Oar &copy; 20XX - Your First and Last Name Here</h3>
+        <h3>Dry Oar &copy; 2021 Taylor Petty </h3>
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
         <h3><a href="contactus.html">Contact Us</a></h3>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
